<!--
  ~ Copyright (C) 2025 Martin Pfeffer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">NetBar</string>
    <string name="monitor_your_network_traffic_in_the_status_bar">Monitor your network traffic in the status bar</string>
    <string name="display_options">Display Options</string>
    <string name="show_upload_traffic">Show Upload Traffic</string>
    <string name="show_download_traffic">Show Download Traffic</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="stop_monitoring">Stop Monitoring</string>
    <string name="network_traffic_history">Traffic History</string>
    <string name="no_network_data_available">No network data available yet</string>
</resources>